--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <aside></aside>
             <aside></aside>
             <aside></aside>
-            <button></button>
+            <button>join now</button>
         </header>
 
         <nav>
@@ -23,7 +23,9 @@
         </nav>
 
         <section>
-            <button></button>
+            <h2></h2>
+            <p></p>
+            <button>join now</button>
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
@@ -47,7 +49,7 @@
         </section>
 
         <footer>
-            <button></button>
+            <button>Take me up again</button>
         </footer>
     </main>
     
