--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <main>
         <header>
-            <aside></aside>
-            <aside></aside>
-            <aside></aside>
-            <button>join now</button>
+            <aside class="left"></aside>
+            <aside class="top-right"></aside>
+            <aside class="bottom-right"></aside>
+            <button class="left-bottom">join now</button>
         </header>
 
         <nav>
@@ -22,10 +22,10 @@
             <button>Contact</button>
         </nav>
 
-        <section>
+        <section class="mid-top">
             <h2></h2>
             <p></p>
-            <button>join now</button>
+            <button class="mid-button">join now</button>
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
@@ -34,12 +34,12 @@
             <article></article>
         </section>
 
-        <section>
+        <section class="mid-bottom">
             <h2></h2>
             <p></p>
         </section>
 
-        <section>
+        <section class="calendar">
             <button></button>
             <button></button>
             <button></button>
@@ -49,7 +49,7 @@
         </section>
 
         <footer>
-            <button>Take me up again</button>
+            <button class="up">Take me up again</button>
         </footer>
     </main>
     
