--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
 <body>
     <main>
         <header>
-            <aside class="left"></aside>
-            <aside class="top-right"></aside>
-            <aside class="bottom-right"></aside>
-            <button class="left-bottom">join now</button>
+            <aside><button class="left-button">join now</button></aside>
+            <aside></aside>
+            <aside></aside>
         </header>
 
-        <nav>
-            <button>Home</button>
-            <button>Our offer</button>
-            <button>Why us</button>
-            <button>Contact</button>
-        </nav>
-
         <section class="mid-top">
+            <nav>
+                <button>Home</button>
+                <button>Our offer</button>
+                <button>Why us</button>
+                <button>Contact</button>
+            </nav>
             <h2></h2>
             <p></p>
             <button class="mid-button">join now</button>
