--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
     <main>
         <header>
-            <aside><button class="left-button">join now</button></aside>
-            <aside></aside>
-            <aside></aside>
+            <aside><h1>We have got you</h1>
+                <p>Together we keep each other safe at home or at work. 
+                    By paying a tiny fee a day, you are fully insured all day long. 
+                    You get it all for as little as<span>$0.4 per pay.</span></p>
+                <button>join now</button>
+                <img src="" alt="bild">
+            </aside>
+            <section></section>
+            <article></article>
         </header>
 
         <section class="mid-top">
