--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
                 <p>Together we keep each other safe at home or at work. 
                     By paying a tiny fee a day, you are fully insured all day long. 
                     You get it all for as little as<span>$0.4 per pay.</span></p>
-                <button>join now</button>
+                <button class="left-button">join now</button>
                 <img src="" alt="bild">
             </aside>
-            <section></section>
-            <article></article>
+            <section>
+                <p>What do we have to offer?</p>
+                <h2>Learn more</h2>
+            </section>
+            <article>
+                <p>What are you waiting for?</p>
+                <h2>Join today</h2>
+            </article>
         </header>
 
         <section class="mid-top">
@@ -27,8 +33,12 @@
                 <button>Why us</button>
                 <button>Contact</button>
             </nav>
-            <h2></h2>
-            <p></p>
+            <h2>Your personal financial safety net online.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis. 
+                Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, 
+                ullamcorper sed mollis ac, interdum vel enim. Pellentesque congue felis eget lorem tempor blandit. 
+                Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero.</p>
             <button class="mid-button">join now</button>
             <img src="" alt="">
             <img src="" alt="">
@@ -39,12 +49,21 @@
         </section>
 
         <section class="mid-bottom">
-            <h2></h2>
-            <p></p>
+            <h2>About us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Morbi ac ultricies massa. Donec id malesuada magna. 
+                Pellentesque aliquet libero erat, fermentum commodo sapien congue ac. 
+                Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. 
+                Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. 
+                Aenean ullamcorper nibh vitae orci laoreet, eu dictum nisi ultrices. 
+                Sed condimentum nibh neque, at ultricies augue facilisis non. Pellentesque a tellus mauris. 
+                Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, 
+                sit amet dignissim orci lorem vel felis. 
+                Ut tempus dignissim.</p>
         </section>
 
         <section class="calendar">
-            <button></button>
+            <button>How It works?</button>
             <button></button>
             <button></button>
             <button></button>
@@ -53,7 +72,7 @@
         </section>
 
         <footer>
-            <button class="up">Take me up again</button>
+            <button>Take me up again</button>
         </footer>
     </main>
     
