--- a/index.html
+++ b/index.html
@@ -67,11 +67,26 @@
 
         <section class="calendar">
             <button>How It works?</button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button>
+                <h3>01</h3>
+                <p>Answer a few questions about yourself</p>
+            </button>
+            <button>
+                <h3>02</h3>
+                <p>Choose a plan. Get a quote.</p>
+            </button>
+            <button>
+                <h3>03</h3>
+                <p>Answer some questions about your medical history.</p>
+            </button>
+            <button>
+                <h3>04</h3>
+                <p>Wait 90 sec to get approved.</p>
+            </button>
+            <button>
+                <h3>05</h3>
+                <p>Done!</p>
+            </button>
         </section>
 
         <footer>
