--- a/index.html
+++ b/index.html
@@ -44,12 +44,9 @@
             <button class="mid-button">join now</button>
         </section>
         
-        <img class="child" src="./image/child.png" alt="child">
-        <img class="adult" src="./image/adult.png" alt="adult">
-        <img class="old" src="./image/old (1).png" alt="old">
-        <article class="child1"></article>
-        <article class="adult1"></article>
-        <article class="old1"></article>
+        <article class="child1"><img class="child" src="./image/child.png" alt="child"></article>
+        <article class="adult1"><img class="adult" src="./image/adult.png" alt="adult"></article>
+        <article class="old1"><img class="old" src="./image/old (1).png" alt="old"></article>
         
         <section class="mid-bottom">
             <h2>About us</h2>
